--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>नेपाली समाचार संग्रह</title>
   
   <!-- PWA and Mobile Meta Tags -->
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#4361ee">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Nepali News">
-  <link rel="apple-touch-icon" href="/logo-192.png">
+  <link rel="apple-touch-icon" href="logo-192.png">
 
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
